# helm-and-kustomize

./: README.md
chart/: Chart.yaml  justfile  values.yaml
chart/templates/: deployment.yaml  ingress.yaml
demo-backend/: Dockerfile.prod  docker-compose.yaml  justfile  pyproject.toml
demo-backend/backend/: main.py
kustomize/: justfile
kustomize/base/: deployment.yaml  kustomization.yaml
kustomize/overlays/dev/: deployment-patch.yaml  kustomization.yaml
kustomize/overlays/prod/: deployment-patch.yaml
raw_yaml/: ingress.yaml  justfile  service.yaml
