[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Schwannden-Kuo <Schwannden.Kuo@dell.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = "^0.23.2"
psutil = "^5.9.5"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
autoflake = "^2.2.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
